syntax = "proto2";

option java_package = "com.rwproto";
option java_outer_classname = "PrivilegeProtos";
package Privilege;

message AllPrivilege {
	optional PrivilegeProperty arena = 1; //竞技场特权点
	optional PrivilegeProperty peakArena = 2;//巅峰竞技场特权点
	optional PrivilegeProperty battleTower = 3;//封神台特权点
}

message PrivilegeProperty {
	repeated PrivilegeValue kv = 1;//按照名字的顺序进行存放
}

message PrivilegeValue{
	required string name = 1;//特权名对应的枚举值
	required string value = 2;//当前充值等级对应的数值或者布尔值
	optional string chargeType = 3;//超出当前充值等级的值时可用于提高这个值的充值类型
}

enum ArenaPrivilegeNames {
	arenaMaxCount = 1;
	isAllowResetArena = 2;
	arenaRewardAdd = 3;
	arenaChallengeDec = 4;
}

enum PeakArenaPrivilegeNames {
	peakMaxCount = 1;
	isAllowResetPeak = 2;
}

enum BattleTowerPrivilegeNames {
     maxResetCount = 1;
     sweepTimeDec = 2;
}

